<resources>
    <string name="app_name">EatGo</string>
    <string name="qr">코드스캔</string>

    <string name="social_login_info_naver_client_name">네이버아이디 로그인</string>

    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="sunday">일</string>

    <string name="NO_STORE_NAME_ERROR"> ⚠️ 가게 이름을 입력해주세요 ⚠️</string>
    <string name="NO_STORE_ADDRESS_ERROR"> ⚠️ 가게 주소를 설정해주세요 ⚠️</string>
    <string name="NO_STORE_IMAGE_ERROR"> ⚠️ 가게 사진을 넣어 주세요 ⚠️</string>
    <string name="STORE_IMAGE_UPLOAD_ERROR"> ⚠️ 가게 사진 업로드 에러입니다. 다시 시도해주세요 ⚠️</string>
    <string name="NO_STORE_CATEGORY_ERROR"> ⚠️ 카테고리를 설정해주세요 ⚠️</string>
    <string name="NO_MENU_REQUIRED_INPUT_ERROR"> ⚠️ 메뉴명, 가격, 수량은 필수 입력란입니다! ⚠️</string>


    <string name="CREATE_STORE_LOADING_MESSAGE"> 가게를 오픈 중 입니다!:)</string>
    <string name="STORE_DETAIL_LOADING_MESSAGE"> 가게정보를 불러오는 중입니다!:)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_main_navigation">MainNavigationActivity</string>

</resources>