<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.store.ManageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/truck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="가게 정보"
                android:textSize="20sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="8" />

            <Button
                android:id="@+id/qr"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:background="@drawable/review_button_border"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"

                android:text="QR" />

            <Button
                android:id="@+id/edit"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:background="@drawable/review_button_border"
                android:textColor="@color/white"
                android:text="수정" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/store_create_box_border"
            android:padding="10dp">

            <TextView
                android:id="@+id/store_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="가게 이름"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@id/store_edittext"
                app:layout_constraintEnd_toEndOf="parent"></TextView>

            <EditText
                android:id="@+id/store_edittext"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/box_border"
                android:hint="가게 이름을 입력해주세요."
                android:padding="10dp"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/store_name"></EditText>

            <TextView
                android:id="@+id/store_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="가게 형태"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/store_edittext"></TextView>

            <RadioGroup
                android:id="@+id/store_type_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                app:layout_constraintTop_toBottomOf="@id/store_type">

                <RadioButton
                    style="@style/StoreRadioButton"
                    android:text="포장마차"></RadioButton>

                <RadioButton
                    style="@style/StoreRadioButton"
                    android:text="매장"></RadioButton>

                <RadioButton
                    style="@style/StoreRadioButton"
                    android:text="푸드트럭"></RadioButton>
            </RadioGroup>

            <TextView
                android:id="@+id/payment_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="결제 방식"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/store_type_radio"></TextView>

            <RadioGroup
                android:id="@+id/payment_type_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                app:layout_constraintTop_toBottomOf="@id/payment_type">

                <RadioButton
                    style="@style/StoreRadioButton"
                    android:text="현금"></RadioButton>

                <RadioButton
                    style="@style/StoreRadioButton"
                    android:text="카드"></RadioButton>

                <RadioButton
                    android:id="@+id/food_truck_type"
                    style="@style/StoreRadioButton"
                    android:text="계좌이체"></RadioButton>
            </RadioGroup>

            <TextView
                android:id="@+id/open_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="장사요일"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/payment_type_radio"></TextView>

            <LinearLayout
                android:id="@+id/toggleBtns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:weightSum="14"
                app:layout_constraintTop_toBottomOf="@id/open_day">

                <ToggleButton
                    android:id="@+id/tbMon"
                    style="@style/DayToggleButton"
                    android:background="@drawable/btn_toggle"
                    android:textOff="@string/monday"
                    android:textOn="@string/monday" />

                <ToggleButton
                    android:id="@+id/tbTue"
                    style="@style/DayToggleButton"
                    android:background="@drawable/btn_toggle"
                    android:textOff="@string/tuesday"
                    android:textOn="@string/tuesday" />

                <ToggleButton
                    android:id="@+id/tbWed"
                    style="@style/DayToggleButton"
                    android:background="@drawable/btn_toggle"
                    android:textOff="@string/wednesday"
                    android:textOn="@string/wednesday" />

                <ToggleButton
                    android:id="@+id/tbThu"
                    style="@style/DayToggleButton"
                    android:background="@drawable/btn_toggle"
                    android:textOff="@string/thursday"
                    android:textOn="@string/thursday" />

                <ToggleButton
                    android:id="@+id/tbFri"
                    style="@style/DayToggleButton"
                    android:background="@drawable/btn_toggle"
                    android:textOff="@string/friday"
                    android:textOn="@string/friday" />

                <ToggleButton
                    android:id="@+id/tb_sat"
                    style="@style/DayToggleButton"
                    android:background="@drawable/btn_toggle"
                    android:textOff="@string/saturday"
                    android:textOn="@string/saturday" />

                <ToggleButton
                    android:id="@+id/tb_sun"
                    style="@style/DayToggleButton"
                    android:background="@drawable/btn_toggle"
                    android:textOff="@string/sunday"
                    android:textOn="@string/sunday" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"


            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="10">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/store_location_select" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:text="가게 위치"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/store_create_box_border"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/map"
                    android:layout_marginTop="20dp"
                    android:layout_width="350dp"
                    android:layout_height="350dp"
                    android:layout_gravity="center"
                    android:background="@color/black" />

                <EditText
                    android:layout_width="350dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/box_border" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/lightbulb" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="영업 상태"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:padding="10px"
            android:background="@drawable/store_create_box_border"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3"
            >

            <TextView
                android:id="@+id/startBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/play_circle"
                android:layout_weight="1.5"
                android:textAlignment="center"
                android:text="영업 시작" />

            <TextView
                android:id="@+id/stopBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/stop_circle"
                android:layout_weight="1.5"
                android:textAlignment="center"
                android:text="영업 종료" />
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
