<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:weightSum="10"
    tools:context=".presentation.store.CreateStoreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="가게 위치"
                android:textSize="20sp"></TextView>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="불러오기"></Button>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/box_border"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="가게 정보"
            android:textSize="20sp"></TextView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp">

            <TextView
                android:id="@+id/store_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="가게 이름"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/store_edittext"
                app:layout_constraintEnd_toEndOf="parent"></TextView>

            <EditText
                android:id="@+id/store_edittext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/box_border"
                android:padding="10dp"
                android:text="테스트"
                app:layout_constraintTop_toBottomOf="@id/store_name"></EditText>

            <TextView
                android:id="@+id/store_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="가게 형태"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/store_edittext"></TextView>

            <RadioGroup
                android:id="@+id/store_type_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                app:layout_constraintTop_toBottomOf="@id/store_type">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="포장마차"
                    android:textSize="15sp"></RadioButton>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="매장"
                    android:textSize="15sp"></RadioButton>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="푸드트럭"
                    android:textSize="15sp"></RadioButton>
            </RadioGroup>

            <TextView
                android:id="@+id/payment_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="결제 방식"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/store_type_radio"></TextView>

            <RadioGroup
                android:id="@+id/payment_type_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                app:layout_constraintTop_toBottomOf="@id/payment_type">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="현금"
                    android:textSize="15sp"></RadioButton>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="카드"
                    android:textSize="15sp"></RadioButton>

                <RadioButton
                    android:id="@+id/food_truck_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="계좌이체"
                    android:textSize="15sp"></RadioButton>
            </RadioGroup>

            <TextView
                android:id="@+id/open_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="장사요일"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/payment_type_radio"></TextView>

            <LinearLayout
                android:id="@+id/toggleBtns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/open_day">

                <ToggleButton
                    android:id="@+id/tbMon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/btn_toggle"
                    android:clickable="true"
                    android:textOff="@string/monday"
                    android:textOn="@string/monday" />

                <ToggleButton
                    android:id="@+id/tbTue"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/btn_toggle"
                    android:clickable="true"
                    android:textOff="@string/tuesday"
                    android:textOn="@string/tuesday" />

                <ToggleButton
                    android:id="@+id/tbWed"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/btn_toggle"
                    android:clickable="true"
                    android:textOff="@string/wednesday"
                    android:textOn="@string/wednesday" />

                <ToggleButton
                    android:id="@+id/tbThu"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/btn_toggle"
                    android:clickable="true"
                    android:textOff="@string/thursday"
                    android:textOn="@string/thursday" />

                <ToggleButton
                    android:id="@+id/tbFri"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/btn_toggle"
                    android:clickable="true"
                    android:textOff="@string/friday"
                    android:textOn="@string/friday" />

                <ToggleButton
                    android:id="@+id/tb_sat"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/btn_toggle"
                    android:clickable="true"
                    android:textOff="@string/saturday"
                    android:textOn="@string/saturday" />

                <ToggleButton
                    android:id="@+id/tb_sun"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/btn_toggle"
                    android:clickable="true"
                    android:textOff="@string/sunday"
                    android:textOn="@string/sunday" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/openRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/toggleBtns"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="분류"
            android:textSize="20sp"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <ToggleButton
                android:id="@+id/cate1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/category_btn1"
                android:clickable="true"
                android:textOff=""
                android:textOn="" />

            <ToggleButton
                android:id="@+id/cate2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/category_btn1"
                android:clickable="true"
                android:textOff=""
                android:textOn="" />

            <ToggleButton
                android:id="@+id/cate3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/category_btn1"
                android:clickable="true"
                android:textOff=""
                android:textOn="" />

            <ToggleButton
                android:id="@+id/cate4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/category_btn1"
                android:clickable="true"
                android:textOff=""
                android:textOn="" />

            <ToggleButton
                android:id="@+id/cate5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/category_btn1"
                android:clickable="true"
                android:textOff=""
                android:textOn="" />

            <ToggleButton
                android:id="@+id/cate6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/category_btn1"
                android:clickable="true"
                android:textOff=""
                android:textOn="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="상세 메뉴"
                android:textSize="20sp"></TextView>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/menuAddBtn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:text="메뉴 추가">

            </Button>
        </LinearLayout>

        <!-- 입력창 레이아웃 -->
        <LinearLayout
            android:id="@+id/menuInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/menuImg"
                    android:layout_width="50dp"
                    android:layout_height="50dp">
                </ImageView>
                <!-- 메뉴 이름 입력창 -->
                <EditText
                    android:id="@+id/editText_menu_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:hint="메뉴 이름"
                    android:inputType="text" />

                <!-- 메뉴 개수 입력창 -->
                <EditText
                    android:id="@+id/editText_menu_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="메뉴 개수"
                    android:inputType="number" />

                <!-- 메뉴 가격 입력창 -->
                <EditText
                    android:id="@+id/editText_menu_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="메뉴 가격"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_add_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="사진 추가" />
                <!-- 입력 완료 버튼 -->
                <Button
                    android:id="@+id/button_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="입력 완료" />

            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="가게 등록하기">
            </Button>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
